// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardHero > renders correctly with default props (snapshot) 1`] = `
<section
  aria-labelledby="dashboard-balance-title"
  class="overflow-hidden rounded-2xl border border-border bg-card"
>
  <div
    class="grid gap-6 p-5 md:p-6 lg:grid-cols-[minmax(0,1fr)_280px] lg:items-end"
  >
    <div
      class="min-w-0"
    >
      <div
        class="flex min-h-11 flex-wrap items-center justify-between gap-2"
      >
        <div
          class="flex items-center gap-1"
        >
          <p
            class="text-sm font-medium text-muted-foreground"
            id="dashboard-balance-title"
          >
            Saldo das contas em BRL
          </p>
          <button
            aria-label="Mais informações"
            class="cursor-help inline-flex min-h-11 min-w-11 items-center justify-center rounded-full transition-colors hover:bg-muted/50 "
            data-state="closed"
            type="button"
          >
            <svg
              class="lucide lucide-circle-help h-4 w-4 text-muted-foreground hover:text-primary transition-colors"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </button>
        </div>
      </div>
      <h1
        class="mt-1 font-display text-4xl font-semibold tracking-tight tabular-nums sm:text-5xl text-foreground"
      >
        R$ 5000.00
      </h1>
      <dl
        class="mt-6 grid grid-cols-2 border-t border-border sm:grid-cols-4"
      >
        <div
          class="min-w-0 py-3 pr-3 sm:border-r sm:border-border"
        >
          <dt
            class="text-sm text-muted-foreground"
          >
            Patrimônio
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-foreground"
          >
            R$ 0.00
          </dd>
        </div>
        <div
          class="min-w-0 border-l border-border py-3 pl-3 sm:border-l-0 sm:border-r sm:pr-3"
        >
          <dt
            class="flex items-center gap-1 text-sm text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-up h-4 w-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 7 13.5 15.5 8.5 10.5 2 17"
              />
              <polyline
                points="16 7 22 7 22 13"
              />
            </svg>
            Entradas
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-positive"
          >
            R$ 8000.00
          </dd>
        </div>
        <div
          class="min-w-0 border-t border-border py-3 pr-3 sm:border-r sm:border-t-0"
        >
          <dt
            class="flex items-center gap-1 text-sm text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-4 w-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 17 13.5 8.5 8.5 13.5 2 7"
              />
              <polyline
                points="16 17 22 17 22 11"
              />
            </svg>
            Saídas
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-negative"
          >
            R$ 3000.00
          </dd>
        </div>
        <div
          class="min-w-0 border-l border-t border-border py-3 pl-3 sm:border-l-0 sm:border-t-0"
        >
          <dt
            class="text-sm text-muted-foreground"
          >
            Taxa de poupança
          </dt>
          <dd
            class="mt-1 text-sm font-semibold tabular-nums text-positive"
          >
            +63%
          </dd>
        </div>
      </dl>
    </div>
  </div>
</section>
`;

exports[`DashboardHero > renders with wealth history and monthly budget (snapshot) 1`] = `
<section
  aria-labelledby="dashboard-balance-title"
  class="overflow-hidden rounded-2xl border border-border bg-card"
>
  <div
    class="grid gap-6 p-5 md:p-6 lg:grid-cols-[minmax(0,1fr)_280px] lg:items-end"
  >
    <div
      class="min-w-0"
    >
      <div
        class="flex min-h-11 flex-wrap items-center justify-between gap-2"
      >
        <div
          class="flex items-center gap-1"
        >
          <p
            class="text-sm font-medium text-muted-foreground"
            id="dashboard-balance-title"
          >
            Saldo das contas em BRL
          </p>
          <button
            aria-label="Mais informações"
            class="cursor-help inline-flex min-h-11 min-w-11 items-center justify-center rounded-full transition-colors hover:bg-muted/50 "
            data-state="closed"
            type="button"
          >
            <svg
              class="lucide lucide-circle-help h-4 w-4 text-muted-foreground hover:text-primary transition-colors"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </button>
        </div>
      </div>
      <h1
        class="mt-1 font-display text-4xl font-semibold tracking-tight tabular-nums sm:text-5xl text-foreground"
      >
        R$ 5000.00
      </h1>
      <dl
        class="mt-6 grid grid-cols-2 border-t border-border sm:grid-cols-4"
      >
        <div
          class="min-w-0 py-3 pr-3 sm:border-r sm:border-border"
        >
          <dt
            class="text-sm text-muted-foreground"
          >
            Patrimônio
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-foreground"
          >
            R$ 0.00
          </dd>
        </div>
        <div
          class="min-w-0 border-l border-border py-3 pl-3 sm:border-l-0 sm:border-r sm:pr-3"
        >
          <dt
            class="flex items-center gap-1 text-sm text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-up h-4 w-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 7 13.5 15.5 8.5 10.5 2 17"
              />
              <polyline
                points="16 7 22 7 22 13"
              />
            </svg>
            Entradas
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-positive"
          >
            R$ 8000.00
          </dd>
        </div>
        <div
          class="min-w-0 border-t border-border py-3 pr-3 sm:border-r sm:border-t-0"
        >
          <dt
            class="flex items-center gap-1 text-sm text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-4 w-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 17 13.5 8.5 8.5 13.5 2 7"
              />
              <polyline
                points="16 17 22 17 22 11"
              />
            </svg>
            Saídas
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-negative"
          >
            R$ 3000.00
          </dd>
        </div>
        <div
          class="min-w-0 border-l border-t border-border py-3 pl-3 sm:border-l-0 sm:border-t-0"
        >
          <dt
            class="text-sm text-muted-foreground"
          >
            Taxa de poupança
          </dt>
          <dd
            class="mt-1 text-sm font-semibold tabular-nums text-positive"
          >
            +63%
          </dd>
        </div>
      </dl>
    </div>
    <div
      aria-busy="true"
      aria-label="Carregando evolução patrimonial"
      class="h-[90px] w-full animate-pulse rounded-xl border border-border p-3.5 lg:w-[280px]"
    >
      <div
        class="mb-2 h-3 w-1/2 rounded bg-muted"
      />
      <div
        class="mt-2 h-full w-full rounded-lg bg-muted/50"
      />
    </div>
  </div>
  <div
    class="border-t border-border bg-muted/20 px-5 py-4 md:px-6"
  >
    <div
      class="mb-2 flex flex-wrap items-end justify-between gap-2"
    >
      <div>
        <div
          class="flex items-center gap-1"
        >
          <p
            class="text-sm font-medium text-foreground"
          >
            Orçamento do mês
          </p>
          <button
            aria-label="Mais informações"
            class="cursor-help inline-flex min-h-11 min-w-11 items-center justify-center rounded-full transition-colors hover:bg-muted/50 "
            data-state="closed"
            type="button"
          >
            <svg
              class="lucide lucide-circle-help h-4 w-4 text-muted-foreground hover:text-primary transition-colors"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </button>
        </div>
        <p
          class="text-sm text-muted-foreground"
        >
          R$ 3000.00 de R$ 7000.00
        </p>
      </div>
      <p
        class="text-sm font-semibold tabular-nums text-foreground"
      >
        42.9% utilizado
      </p>
    </div>
    <div
      aria-label="Uso do orçamento mensal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="42.9"
      aria-valuetext="42.9% utilizado"
      class="h-2 w-full overflow-hidden rounded-full bg-muted"
      role="progressbar"
    >
      <div
        class="h-full rounded-full bg-success"
        style="width: 42.857142857142854%;"
      />
    </div>
  </div>
</section>
`;

exports[`DashboardHero > shows negative balance correctly (snapshot) 1`] = `
<section
  aria-labelledby="dashboard-balance-title"
  class="overflow-hidden rounded-2xl border border-border bg-card"
>
  <div
    class="grid gap-6 p-5 md:p-6 lg:grid-cols-[minmax(0,1fr)_280px] lg:items-end"
  >
    <div
      class="min-w-0"
    >
      <div
        class="flex min-h-11 flex-wrap items-center justify-between gap-2"
      >
        <div
          class="flex items-center gap-1"
        >
          <p
            class="text-sm font-medium text-muted-foreground"
            id="dashboard-balance-title"
          >
            Saldo das contas em BRL
          </p>
          <button
            aria-label="Mais informações"
            class="cursor-help inline-flex min-h-11 min-w-11 items-center justify-center rounded-full transition-colors hover:bg-muted/50 "
            data-state="closed"
            type="button"
          >
            <svg
              class="lucide lucide-circle-help h-4 w-4 text-muted-foreground hover:text-primary transition-colors"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </button>
        </div>
      </div>
      <h1
        class="mt-1 font-display text-4xl font-semibold tracking-tight tabular-nums sm:text-5xl text-destructive"
      >
        R$ -200.00
      </h1>
      <dl
        class="mt-6 grid grid-cols-2 border-t border-border sm:grid-cols-4"
      >
        <div
          class="min-w-0 py-3 pr-3 sm:border-r sm:border-border"
        >
          <dt
            class="text-sm text-muted-foreground"
          >
            Patrimônio
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-foreground"
          >
            R$ 0.00
          </dd>
        </div>
        <div
          class="min-w-0 border-l border-border py-3 pl-3 sm:border-l-0 sm:border-r sm:pr-3"
        >
          <dt
            class="flex items-center gap-1 text-sm text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-up h-4 w-4 text-success"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 7 13.5 15.5 8.5 10.5 2 17"
              />
              <polyline
                points="16 7 22 7 22 13"
              />
            </svg>
            Entradas
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-positive"
          >
            R$ 0.00
          </dd>
        </div>
        <div
          class="min-w-0 border-t border-border py-3 pr-3 sm:border-r sm:border-t-0"
        >
          <dt
            class="flex items-center gap-1 text-sm text-muted-foreground"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-down h-4 w-4 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="22 17 13.5 8.5 8.5 13.5 2 7"
              />
              <polyline
                points="16 17 22 17 22 11"
              />
            </svg>
            Saídas
          </dt>
          <dd
            class="mt-1 truncate text-sm font-semibold tabular-nums text-negative"
          >
            R$ 200.00
          </dd>
        </div>
        <div
          class="min-w-0 border-l border-t border-border py-3 pl-3 sm:border-l-0 sm:border-t-0"
        >
          <dt
            class="text-sm text-muted-foreground"
          >
            Taxa de poupança
          </dt>
          <dd
            class="mt-1 text-sm font-semibold tabular-nums text-muted-foreground"
          >
            Sem entradas
          </dd>
        </div>
      </dl>
    </div>
  </div>
</section>
`;
